--- a/위키독스 파이썬 300제.ipynb
+++ b/위키독스 파이썬 300제.ipynb
@@ -642,36 +642,134 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "489e24c3",
+   "cell_type": "markdown",
+   "id": "f8411192",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 017 정수를 문자열 100으로 변환"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d4be345",
+   "metadata": {},
+   "source": [
+    "정수 100을 문자열 '100'으로 변환해보세요."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6c5eef0a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "48106566",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'str' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[28], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m num \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m100\u001b[39m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mtype\u001b[39m(num)\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28mstr\u001b[39m(num)\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'str' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "num = 100\n",
+    "type(num)\n",
+    "str(num)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a0ccc6b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 018 문자열을 실수로 변환"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "300a2cab",
+   "metadata": {},
+   "source": [
+    "문자열 \"15.79\"를 실수(float) 타입으로 변환해보세요."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7f6b15b6",
+   "execution_count": 16,
+   "id": "b4359ba4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15.79 <class 'float'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = \"15.79\"\n",
+    "data = float(data)\n",
+    "print(data, type(data))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ef75b09",
+   "metadata": {},
+   "source": [
+    "## 019 문자열을 정수로 변환"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "87dd3b4c",
+   "metadata": {},
+   "source": [
+    "year라는 변수가 문자열 타입의 연도를 바인딩하고 있습니다. 이를 정수로 변환한 후 최근 3년의 연도를 화면에 출력해보세요."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "76bdd452",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2020 2021 2022 <class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "year = '2020'\n",
+    "year = int(year)\n",
+    "print(year, (year+1), (year+2), type(year))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "72521955",
+   "metadata": {},
+   "source": [
+    "## 020 파이썬 계산"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8c44066",
+   "metadata": {},
+   "source": [
+    "에어컨이 월 48,584원에 무이자 36개월의 조건으로 홈쇼핑에서 판매되고 있습니다. 총 금액을 계산한 후 이를 화면에 출력해보세요. (변수사용하기)"
+   ]
   },
   {
    "cell_type": "code",
@@ -679,7 +777,9 @@
    "id": "0c2f33d6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "485"
+   ]
   }
  ],
  "metadata": {
