--- a/01 자료형과 변수.ipynb
+++ b/01 자료형과 변수.ipynb
@@ -71890,25 +71890,911 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aa1603e6",
+   "cell_type": "markdown",
+   "id": "aa7feba8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 04-1 함수"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e5102de6",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "def add(a, b):\n",
+    "    return a + b\n",
+    "\n",
+    "a = 3\n",
+    "b = 4\n",
+    "c = add(a, b)\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c828234a",
+   "metadata": {},
+   "source": [
+    "## 일반적인 함수"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "df1e0d90",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "def add(a, b):\n",
+    "    result = a + b\n",
+    "    return result\n",
+    "\n",
+    "c = add(3, 4)\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ef01394",
+   "metadata": {},
+   "source": [
+    "## 입력값이 없는 함수"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "6c5078ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi\n"
+     ]
+    }
+   ],
+   "source": [
+    "def say():\n",
+    "    return 'Hi'\n",
+    "\n",
+    "a = say()\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53b1c739",
+   "metadata": {},
+   "source": [
+    "## 리턴값이 없는 함수"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "6618bd93",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add(a, b):\n",
+    "    print(\"%d, %d의 합은 %d입니다.\" % (a, b, a+b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "20274d78",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3, 4의 합은 7입니다.\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = add(3, 4)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "635ecf99",
+   "metadata": {},
+   "source": [
+    "## 매개변수를 지정하여 호출하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "33b5c738",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sub(a, b):\n",
+    "    return a - b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "986768a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = sub(a=7, b=3)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "56dbb33a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-2\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = sub(b=5, a=3)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a46fbd1",
+   "metadata": {},
+   "source": [
+    "## 여러 개의 입력값을 받는 함수 만들기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "0db05435",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "55\n"
+     ]
+    }
+   ],
+   "source": [
+    "def add_many(*args):\n",
+    "    result = 0\n",
+    "    for i in args:\n",
+    "        result = result + i\n",
+    "    return result\n",
+    "\n",
+    "result = add_many(1,2,3)\n",
+    "print(result)\n",
+    "\n",
+    "result = add_many(1,2,3,4,5,6,7,8,9,10)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "7f796d6d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n",
+      "120\n"
+     ]
+    }
+   ],
+   "source": [
+    "def add_mul(choice, *args):\n",
+    "    if choice == \"add\":\n",
+    "        result = 0\n",
+    "        for i in args:\n",
+    "            result = result + i\n",
+    "    elif choice == \"mul\":\n",
+    "        result = 1\n",
+    "        for i in args:\n",
+    "            result = result * i\n",
+    "    return result \n",
+    "\n",
+    "result = add_mul('add', 1,2,3,4,5)\n",
+    "print(result)\n",
+    "\n",
+    "result = add_mul('mul', 1,2,3,4,5)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64febbe7",
+   "metadata": {},
+   "source": [
+    "## 키워드 매개변수, kwargs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "1d4bb86e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_kwarges(**kwargs):\n",
+    "    print(kwargs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "e9021c9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 1}\n",
+      "{'name': 'foo', 'age': 3}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'age': 3, 'name': 'foo'}"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print_kwargs(a=1)\n",
+    "{'a': 1}\n",
+    "print_kwargs(name='foo', age=3)\n",
+    "{'age':3, 'name':'foo'}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25f20fc9",
+   "metadata": {},
+   "source": [
+    "## 함수의 리턴값은 언제나 하나이다"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "07c4c928",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_and_mul(a,b):\n",
+    "    return a+b, a*b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "c6e14e41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = add_and_mul(3,4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "a2d9c773",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(7, 12)"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "dae5462c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result1, result2 = add_and_mul(3,4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "923c9dd6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "477f4d59",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "3bc57346",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5, 6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = add_and_mul(2,3)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f5c7b6c",
+   "metadata": {},
+   "source": [
+    "## return의 또 다른 쓰임새"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "92e3376b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " def say_nick(nick): \n",
+    "    if nick == \"바보\": \n",
+    "         return \n",
+    "     print(\"나의 별명은 %s 입니다.\" % nick)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "dda8aeec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "나의 별명은 야호 입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    " say_nick('야호')\n",
+    "\n",
+    " say_nick('바보')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9bdf2a0b",
+   "metadata": {},
+   "source": [
+    "## 매개변수에 초깃값 미리 설정하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "5303f8aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def say_myself(name, age, man=True): \n",
+    "    print(\"나의 이름은 %s 입니다.\" % name) \n",
+    "    print(\"나이는 %d살입니다.\" % age) \n",
+    "    if man: \n",
+    "        print(\"남자입니다.\")\n",
+    "    else: \n",
+    "        print(\"여자입니다.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "ae5b8c96",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "나의 이름은 박응용 입니다.\n",
+      "나이는 27살입니다.\n",
+      "남자입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "say_myself(\"박응용\", 27)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "a583244a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "나의 이름은 박응용 입니다.\n",
+      "나이는 27살입니다.\n",
+      "남자입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "say_myself('박응용', 27, True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb95c610",
+   "metadata": {},
+   "source": [
+    "## 함수 안에서 선언한 변수의 효력 범위"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "98a2ba0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 1\n",
+    "def vartest(a):\n",
+    "    a = a+1\n",
+    "\n",
+    "vartest(a)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "72e4d4bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def vartest(hello):\n",
+    "    hello = hello + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "3204a930",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "def vartest(a):\n",
+    "    a = a + 1\n",
+    "\n",
+    "vartest(3)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a606813f",
+   "metadata": {},
+   "source": [
+    "## 함수 안에서 함수 밖의 변수를 변경하는 방법"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a29fcd4",
+   "metadata": {},
+   "source": [
+    "### 1. return 사용하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "16c21ca1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 1\n",
+    "def vartest(a):\n",
+    "    a = a+1\n",
+    "    return a\n",
+    "\n",
+    "a = vartest(a)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9bed04b",
+   "metadata": {},
+   "source": [
+    "### 2. globla 명령어 사용하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "0320a519",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 1\n",
+    "def vartest():\n",
+    "    global a\n",
+    "    a = a+1\n",
+    "\n",
+    "vartest()\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3662d2ae",
+   "metadata": {},
+   "source": [
+    "## lambda 예약어"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "afe41ded",
+   "metadata": {},
+   "source": [
+    "사용법은 다음과 같다"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3298e3fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "함수_이름 = lambda 매개변수1, 매개변수2, ...: 매개변수를_이용한_표현식"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "31608283",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "add = lambda a, b: a+b\n",
+    "result = add(3, 4)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "8086ce1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add(a,b):\n",
+    "    return a+b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "ea99490a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = add(3,4)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1c9124e",
+   "metadata": {},
+   "source": [
+    "## 04-2 사용자 입출력"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ebf5f14",
+   "metadata": {},
+   "source": [
+    "## input 사용하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "4e6435a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Life is too short, you need python good\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = input(\"Life is too short, you need python\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "15875592",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "숫자를 입력하세요:1\n"
+     ]
+    }
+   ],
+   "source": [
+    "number = input(\"숫자를 입력하세요:\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "a743f489",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "숫자를 입력하세요:3\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "number = input(\"숫자를 입력하세요:\")\n",
+    "print(number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "ba89dcd7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(number)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83c21a16",
+   "metadata": {},
+   "source": [
+    "## print 자세히 알기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "acea9883",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123\n",
+      "Python\n",
+      "[1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 123\n",
+    "print(a)\n",
+    "\n",
+    "a = \"Python\"\n",
+    "print(a)\n",
+    "\n",
+    "a = [1,2,3]\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c084c45",
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b077f2ff",
+   "id": "453fefce",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32978f6a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09e79a35",
    "metadata": {},
    "outputs": [],
    "source": []
